# wolf-catcher

./: .gitignore  README.md  build.ps1  config.yaml  generate_all_ui2py.py  list.yaml  main.py  main.spec  pyproject.toml  resources_rc.py  test.py  ui.ps1
.qt_for_python/uic/: DownloadItem.py  MainWindow.py
driver/: ChromeDriver Downloads.url  Geckodriver Downloads.url
src/: DownloadItem.py  MainWindow.py
src/browser/: BrowserEventListener.py  BrowserSession.py  BrowserWorker.py
src/downloader/: Downloader.py
src/lib/: QToaster.py  QtSingleton.py  Singleton.py  exceptions.py
src/model/: Product.py  Site.py
src/site/: Site.py  SiteBase.py  SiteLoader.py  TitleInfo.py  Wfwf.py
src/site/browser/: BrowserDriver.py  BrowserGet.py  RequestGet.py  Session.py  WebGet.py
src/test/: url_test.py
src/ui/: DownloadItem.ui  MainWindow.ui  Ui_DownloadItem.py  Ui_MainWindow.py  resources.qrc
src/util/: Clipboard.py  Compressor.py  Config.py  DatabaseManager.py  Downloader.py  ImageCompress.py  QtSingleton.py  SeleniumWorker.py  Site.py  UpdateDomain.py  Upscaler.py  WebCrawring.py  file_name.py  image.py  message.py
test/: rex.ipynb  t.py  th_test.py
ui/: DownloadItem.ui  resources.qrc
