[tool.poetry]
name = "wolf-catcher"
version = "0.1.0"
description = ""
authors = ["gyuha <nicegyuha@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
arrow = "^1.2.2"
bs4 = "^0.0.1"
PySide6 = "^6.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
